--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Mohamed Debbagh
-subtitle: Ph.D @ McGill University
+subtitle: Ph.D @ McGill UniversityBioresource Engineering | Biomass Production Lab | Sensor Fusion and ML for Controlled Environment Agriculture
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
@@ -45,12 +45,12 @@ url: "" # the base hostname & protocol for your site
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
-twitter_url:
+twitter_url: https://twitter.com/moha7108
 facebook_url:
 googleplus_url:
 instagram_url:
 linkedin_url:
-github_url:
+github_url: https://github.com/moha7108
 stackoverflow_url:
 pinterest_url:
 slack_url:
