--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Mohamed Debbagh
-subtitle: Ph.D @ McGill UniversityBioresource Engineering | Biomass Production Lab | Sensor Fusion and ML for Controlled Environment Agriculture
+subtitle: Ph.D @ McGill University | Sensor Fusion and ML for Controlled Environment Agriculture
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
