--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,9 @@
 # in the templates via {{ site.myvariable }}.
 title: Mohamed Debbagh
 subtitle: Ph.D @ McGill University 
-| Sensor Fusion and ML for Controlled Environment Agriculture
-description: >- # this means to ignore newlines until "baseurl:"
+  | Sensor Fusion and ML for Controlled Environment Agriculture
+description: test 
+  >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
 author: Mohamed Debbagh
