--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Mohamed Debbagh
-subtitle: Ph.D @ McGill University | Sensor Fusion| ML for Controlled Environment Agriculture
-description: test 
-  >- # this means to ignore newlines until "baseurl:"
+subtitle: Ph.D @ McGill University | Sensor Fusion | ML for Controlled Environment Agriculture
+description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
 author: Mohamed Debbagh
