--- a/_config.yml
+++ b/_config.yml
@@ -39,16 +39,16 @@ avatar: assets/images/propic.jpg
 
 # You'll want to customize url and baseurl for your own site:
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://moha7108.github.io" # the base hostname & protocol for your site
+url: "https://mohas95.github.io" # the base hostname & protocol for your site
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
-twitter_url: https://twitter.com/moha7108
+twitter_url: 
 facebook_url:
 googleplus_url:
 instagram_url:
 linkedin_url:
-github_url: https://github.com/moha7108
+github_url: https://github.com/mohas95
 stackoverflow_url:
 pinterest_url:
 slack_url:
